# ShunFengParcel/api/helloworld/payment/payment.pb.go
@@ -1,0 +1,166 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.36.10
+// 	protoc        v3.21.11
+// source: api/helloworld/payment/payment.proto
+
+package payment
+
+import (
+	_ "google.golang.org/genproto/googleapis/api/annotations"
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	reflect "reflect"
+	sync "sync"
+	unsafe "unsafe"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+type UpdatePaymentRequest struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *UpdatePaymentRequest) Reset() {
+	*x = UpdatePaymentRequest{}
+	mi := &file_api_helloworld_payment_payment_proto_msgTypes[0]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *UpdatePaymentRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*UpdatePaymentRequest) ProtoMessage() {}
+
+func (x *UpdatePaymentRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_api_helloworld_payment_payment_proto_msgTypes[0]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use UpdatePaymentRequest.ProtoReflect.Descriptor instead.
+func (*UpdatePaymentRequest) Descriptor() ([]byte, []int) {
+	return file_api_helloworld_payment_payment_proto_rawDescGZIP(), []int{0}
+}
+
+type UpdatePaymentReply struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Result        string                 `protobuf:"bytes,1,opt,name=Result,proto3" json:"Result,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *UpdatePaymentReply) Reset() {
+	*x = UpdatePaymentReply{}
+	mi := &file_api_helloworld_payment_payment_proto_msgTypes[1]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *UpdatePaymentReply) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*UpdatePaymentReply) ProtoMessage() {}
+
+func (x *UpdatePaymentReply) ProtoReflect() protoreflect.Message {
+	mi := &file_api_helloworld_payment_payment_proto_msgTypes[1]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use UpdatePaymentReply.ProtoReflect.Descriptor instead.
+func (*UpdatePaymentReply) Descriptor() ([]byte, []int) {
+	return file_api_helloworld_payment_payment_proto_rawDescGZIP(), []int{1}
+}
+
+func (x *UpdatePaymentReply) GetResult() string {
+	if x != nil {
+		return x.Result
+	}
+	return ""
+}
+
+var File_api_helloworld_payment_payment_proto protoreflect.FileDescriptor
+
+const file_api_helloworld_payment_payment_proto_rawDesc = "" +
+	"\n" +
+	"$api/helloworld/payment/payment.proto\x12\x16api.helloworld.payment\x1a\x1cgoogle/api/annotations.proto\"\x16\n" +
+	"\x14UpdatePaymentRequest\",\n" +
+	"\x12UpdatePaymentReply\x12\x16\n" +
+	"\x06Result\x18\x01 \x01(\tR\x06Result2\x90\x01\n" +
+	"\aPayment\x12\x84\x01\n" +
+	"\rUpdatePayment\x12,.api.helloworld.payment.UpdatePaymentRequest\x1a*.api.helloworld.payment.UpdatePaymentReply\"\x19\x82\xd3\xe4\x93\x02\x13:\x01*\"\x0epayment/updateBI\n" +
+	"\x16api.helloworld.paymentP\x01Z-ShunFengParcel/api/helloworld/payment;paymentb\x06proto3"
+
+var (
+	file_api_helloworld_payment_payment_proto_rawDescOnce sync.Once
+	file_api_helloworld_payment_payment_proto_rawDescData []byte
+)
+
+func file_api_helloworld_payment_payment_proto_rawDescGZIP() []byte {
+	file_api_helloworld_payment_payment_proto_rawDescOnce.Do(func() {
+		file_api_helloworld_payment_payment_proto_rawDescData = protoimpl.X.CompressGZIP(unsafe.Slice(unsafe.StringData(file_api_helloworld_payment_payment_proto_rawDesc), len(file_api_helloworld_payment_payment_proto_rawDesc)))
+	})
+	return file_api_helloworld_payment_payment_proto_rawDescData
+}
+
+var file_api_helloworld_payment_payment_proto_msgTypes = make([]protoimpl.MessageInfo, 2)
+var file_api_helloworld_payment_payment_proto_goTypes = []any{
+	(*UpdatePaymentRequest)(nil), // 0: api.helloworld.payment.UpdatePaymentRequest
+	(*UpdatePaymentReply)(nil),   // 1: api.helloworld.payment.UpdatePaymentReply
+}
+var file_api_helloworld_payment_payment_proto_depIdxs = []int32{
+	0, // 0: api.helloworld.payment.Payment.UpdatePayment:input_type -> api.helloworld.payment.UpdatePaymentRequest
+	1, // 1: api.helloworld.payment.Payment.UpdatePayment:output_type -> api.helloworld.payment.UpdatePaymentReply
+	1, // [1:2] is the sub-list for method output_type
+	0, // [0:1] is the sub-list for method input_type
+	0, // [0:0] is the sub-list for extension type_name
+	0, // [0:0] is the sub-list for extension extendee
+	0, // [0:0] is the sub-list for field type_name
+}
+
+func init() { file_api_helloworld_payment_payment_proto_init() }
+func file_api_helloworld_payment_payment_proto_init() {
+	if File_api_helloworld_payment_payment_proto != nil {
+		return
+	}
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: unsafe.Slice(unsafe.StringData(file_api_helloworld_payment_payment_proto_rawDesc), len(file_api_helloworld_payment_payment_proto_rawDesc)),
+			NumEnums:      0,
+			NumMessages:   2,
+			NumExtensions: 0,
+			NumServices:   1,
+		},
+		GoTypes:           file_api_helloworld_payment_payment_proto_goTypes,
+		DependencyIndexes: file_api_helloworld_payment_payment_proto_depIdxs,
+		MessageInfos:      file_api_helloworld_payment_payment_proto_msgTypes,
+	}.Build()
+	File_api_helloworld_payment_payment_proto = out.File
+	file_api_helloworld_payment_payment_proto_goTypes = nil
+	file_api_helloworld_payment_payment_proto_depIdxs = nil
+}
