# ShunFengParcel/api/helloworld/payment/payment_grpc.pb.go
@@ -1,0 +1,121 @@
+// Code generated by protoc-gen-go-grpc. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-grpc v1.5.1
+// - protoc             v3.21.11
+// source: api/helloworld/payment/payment.proto
+
+package payment
+
+import (
+	context "context"
+	grpc "google.golang.org/grpc"
+	codes "google.golang.org/grpc/codes"
+	status "google.golang.org/grpc/status"
+)
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the grpc package it is being compiled against.
+// Requires gRPC-Go v1.64.0 or later.
+const _ = grpc.SupportPackageIsVersion9
+
+const (
+	Payment_UpdatePayment_FullMethodName = "/api.helloworld.payment.Payment/UpdatePayment"
+)
+
+// PaymentClient is the client API for Payment service.
+//
+// For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
+type PaymentClient interface {
+	UpdatePayment(ctx context.Context, in *UpdatePaymentRequest, opts ...grpc.CallOption) (*UpdatePaymentReply, error)
+}
+
+type paymentClient struct {
+	cc grpc.ClientConnInterface
+}
+
+func NewPaymentClient(cc grpc.ClientConnInterface) PaymentClient {
+	return &paymentClient{cc}
+}
+
+func (c *paymentClient) UpdatePayment(ctx context.Context, in *UpdatePaymentRequest, opts ...grpc.CallOption) (*UpdatePaymentReply, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(UpdatePaymentReply)
+	err := c.cc.Invoke(ctx, Payment_UpdatePayment_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+// PaymentServer is the server API for Payment service.
+// All implementations must embed UnimplementedPaymentServer
+// for forward compatibility.
+type PaymentServer interface {
+	UpdatePayment(context.Context, *UpdatePaymentRequest) (*UpdatePaymentReply, error)
+	mustEmbedUnimplementedPaymentServer()
+}
+
+// UnimplementedPaymentServer must be embedded to have
+// forward compatible implementations.
+//
+// NOTE: this should be embedded by value instead of pointer to avoid a nil
+// pointer dereference when methods are called.
+type UnimplementedPaymentServer struct{}
+
+func (UnimplementedPaymentServer) UpdatePayment(context.Context, *UpdatePaymentRequest) (*UpdatePaymentReply, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method UpdatePayment not implemented")
+}
+func (UnimplementedPaymentServer) mustEmbedUnimplementedPaymentServer() {}
+func (UnimplementedPaymentServer) testEmbeddedByValue()                 {}
+
+// UnsafePaymentServer may be embedded to opt out of forward compatibility for this service.
+// Use of this interface is not recommended, as added methods to PaymentServer will
+// result in compilation errors.
+type UnsafePaymentServer interface {
+	mustEmbedUnimplementedPaymentServer()
+}
+
+func RegisterPaymentServer(s grpc.ServiceRegistrar, srv PaymentServer) {
+	// If the following call pancis, it indicates UnimplementedPaymentServer was
+	// embedded by pointer and is nil.  This will cause panics if an
+	// unimplemented method is ever invoked, so we test this at initialization
+	// time to prevent it from happening at runtime later due to I/O.
+	if t, ok := srv.(interface{ testEmbeddedByValue() }); ok {
+		t.testEmbeddedByValue()
+	}
+	s.RegisterService(&Payment_ServiceDesc, srv)
+}
+
+func _Payment_UpdatePayment_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(UpdatePaymentRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(PaymentServer).UpdatePayment(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: Payment_UpdatePayment_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(PaymentServer).UpdatePayment(ctx, req.(*UpdatePaymentRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+// Payment_ServiceDesc is the grpc.ServiceDesc for Payment service.
+// It's only intended for direct use with grpc.RegisterService,
+// and not to be introspected or modified (even as a copy)
+var Payment_ServiceDesc = grpc.ServiceDesc{
+	ServiceName: "api.helloworld.payment.Payment",
+	HandlerType: (*PaymentServer)(nil),
+	Methods: []grpc.MethodDesc{
+		{
+			MethodName: "UpdatePayment",
+			Handler:    _Payment_UpdatePayment_Handler,
+		},
+	},
+	Streams:  []grpc.StreamDesc{},
+	Metadata: "api/helloworld/payment/payment.proto",
+}
