# ShunFengParcel/api/helloworld/payment/payment_http.pb.go
@@ -1,0 +1,78 @@
+// Code generated by protoc-gen-go-http. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-http v2.9.0
+// - protoc             v3.21.11
+// source: api/helloworld/payment/payment.proto
+
+package payment
+
+import (
+	context "context"
+	http "github.com/go-kratos/kratos/v2/transport/http"
+	binding "github.com/go-kratos/kratos/v2/transport/http/binding"
+)
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the kratos package it is being compiled against.
+var _ = new(context.Context)
+var _ = binding.EncodeURL
+
+const _ = http.SupportPackageIsVersion1
+
+const OperationPaymentUpdatePayment = "/api.helloworld.payment.Payment/UpdatePayment"
+
+type PaymentHTTPServer interface {
+	UpdatePayment(context.Context, *UpdatePaymentRequest) (*UpdatePaymentReply, error)
+}
+
+func RegisterPaymentHTTPServer(s *http.Server, srv PaymentHTTPServer) {
+	r := s.Route("/")
+	r.POST("payment/update", _Payment_UpdatePayment0_HTTP_Handler(srv))
+}
+
+func _Payment_UpdatePayment0_HTTP_Handler(srv PaymentHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in UpdatePaymentRequest
+		if err := ctx.Bind(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationPaymentUpdatePayment)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.UpdatePayment(ctx, req.(*UpdatePaymentRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*UpdatePaymentReply)
+		return ctx.Result(200, reply)
+	}
+}
+
+type PaymentHTTPClient interface {
+	UpdatePayment(ctx context.Context, req *UpdatePaymentRequest, opts ...http.CallOption) (rsp *UpdatePaymentReply, err error)
+}
+
+type PaymentHTTPClientImpl struct {
+	cc *http.Client
+}
+
+func NewPaymentHTTPClient(client *http.Client) PaymentHTTPClient {
+	return &PaymentHTTPClientImpl{client}
+}
+
+func (c *PaymentHTTPClientImpl) UpdatePayment(ctx context.Context, in *UpdatePaymentRequest, opts ...http.CallOption) (*UpdatePaymentReply, error) {
+	var out UpdatePaymentReply
+	pattern := "payment/update"
+	path := binding.EncodeURL(pattern, in, false)
+	opts = append(opts, http.Operation(OperationPaymentUpdatePayment))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "POST", path, in, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
